feat: updats .env.example and register endpoint docs
